fix: исправление CORS для сервера и настройка деплоя